--- a/style-sophie.css
+++ b/style-sophie.css
@@ -5,6 +5,7 @@
 
 main{
     padding: 3em;
+    background-color: rgb(249, 238, 249);
 }
 
 main h2{
@@ -16,8 +17,13 @@ main p{
     max-width: 800px;
 }
 
+main p:first-of-type::selection{
+    background-color:violet;
+}
+
 main ul:first-of-type{
     margin-left: 1em;
+    max-width: 950px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -37,20 +43,22 @@ main ul:first-of-type li p:first-of-type{
 main ul:nth-of-type(2){
     margin-top:1em;
     list-style-type: none;
-
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
 }
 
 main ul:nth-of-type(2) li{
-    margin: 1em 1em 0 0;
+    margin: 1em 0;
     padding: 2.5em;
+    background-color: white;
 
     border-radius: 15px;
     box-shadow: 0px 0px 5px grey;
-    width: 30%;
-    max-width: 300px ;
+    width: 100%;
+    max-width: 85vw;
+}
+
+main ul:nth-of-type(2) li > img{
+    margin-top: 1em;
+    max-width: 600px;
 }
 
 /* -----------------  link ::before  ------------------*/
@@ -59,6 +67,7 @@ main ul:nth-of-type(2) li a{
     margin-top: 1em;
     padding: 1.5em;
     box-shadow: 0 0 5px grey;
+    max-width: 200px;
 
     color: black;
     text-decoration: none;
@@ -71,7 +80,8 @@ main ul:nth-of-type(2) li a{
 }
 
 main ul:nth-of-type(2) li a:first-of-type:hover::before{
-    content: ">     "
+    content: ">";
+    margin-right: 0.5em;
 }
 
 main ul:nth-of-type(2) li a:nth-of-type(2)::before{
@@ -80,6 +90,7 @@ main ul:nth-of-type(2) li a:nth-of-type(2)::before{
 
 /* -----------------  knop ::after  ------------------*/
 main ul:nth-of-type(2) li button{
+    display: block;
     position: relative;
     margin-top: 1em;
     padding: 1.5em;
@@ -108,6 +119,7 @@ main ul:nth-of-type(2) li button:hover::after {
 /* -----------------  foto overlay  ------------------*/
 main ul:nth-of-type(2) li div{
     width: 100%;
+    max-width: 600px;
     margin-top:1em;
     position: relative;
 }
